# pyqualify

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  publish.bat  pyproject.toml  setup-githooks.bat
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml
docs/: api-analysis.md  architecture.md  code-analysis.md  configuration.md  development.md  html-reports.md  index.md  pdf-reports.md  scoring.md  tui-dashboard.md  web-analysis.md
pyqualify/: __init__.py  __main__.py  container.py  models.py  tool_registry.py  utils.py
pyqualify/ai/: __init__.py  engine.py  prompts.py  protocol.py
pyqualify/analyzers/: __init__.py  api_analyzer.py  code_analyzer.py  (+2 more)
tests/: __init__.py  test_ai_engine.py  test_ai_protocol.py  test_api_analyzer.py  test_app_event_handlers.py  test_cli_formatter.py  test_cli_main.py  test_cli_progress.py  test_cli_validators.py  test_code_analyzer.py  test_config_editor.py  test_config_manager.py  test_container.py  test_graceful_shutdown.py  test_header_panel_spinner.py  test_help_modal.py  test_html_generator.py  test_issue_detail_panel.py  test_log_panel.py  test_logger.py  test_main_entry.py  test_models.py  test_prompts.py  test_render_error_recovery.py  test_resize_handling.py  test_runner.py  test_scoring_engine.py  test_terminal_dimensions.py  test_unrecoverable_error.py  test_utils.py  test_web_analyzer.py
(+31 files in other folders)
