[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqualify"
version = "1.0.0b1"
description = "AI-powered QA and Security Analysis CLI Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "enzox0"}
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "reportlab>=4.5.1",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
pyqualify = "pyqualify.cli.main:cli"

[tool.setuptools.packages.find]
include = ["pyqualify*"]

[tool.setuptools.package-data]
pyqualify = ["**/*.tcss", "**/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
